--- a/auth-service/conf/app.conf
+++ b/auth-service/conf/app.conf
@@ -1,7 +1,7 @@
 appname = auth-service
 httpport = 8081
 runmode = dev
-autorender = false
+autorender = true
 copyrequestbody = true
 EnableDocs = true
 sqlconn = 
