feat: implement jwt token (WIP)

--- a/auth-service/.env
+++ b/auth-service/.env
@@ -3,3 +3,5 @@ db_pass = postgrespw
 db_name = db_auth_mini
 db_host = localhost
 db_port = 49153
+jwt_private_key = jwt_private_key
+jwt_public_key = jwt_public_key
