feat: implement middlewares & users private endpoints

--- a/user-service/.env
+++ b/user-service/.env
@@ -3,3 +3,5 @@ db_pass = postgrespw
 db_name = db_user_mini
 db_host = localhost
 db_port = 49153
+jwt_signature_key = jwt_signature_key
+jwt_expiration_time = 84600
