--- a/auth-service/conf/dev.app.conf
+++ b/auth-service/conf/dev.app.conf
@@ -5,3 +5,5 @@ autorender = true
 copyrequestbody = true
 EnableDocs = true
 sqlconn = 
+
+user_service_url = "http://localhost:8080/user-service/v1
