fix: config user service url

--- a/auth-service/conf/dev.app.conf
+++ b/auth-service/conf/dev.app.conf
@@ -6,4 +6,4 @@ copyrequestbody = true
 EnableDocs = true
 sqlconn = 
 
-user_service_url = "http://localhost:8080/user-service/v1
+user_service_url = "http://user-service:8080/user-service/v1
