chore: simplify env

--- a/auth-service/conf/app.conf
+++ b/auth-service/conf/app.conf
@@ -1,9 +1,9 @@
 appname = auth-service
 httpport = 8081
 runmode = dev
-autorender = true
+autorender = false
 copyrequestbody = true
 EnableDocs = true
 sqlconn = 
 
-user_service_url = "http://localhost:8080/user-service/v1
+user_service_url = http://user-service:8080/v1
