--- a/auth-service/.env
+++ b/auth-service/.env
@@ -2,7 +2,7 @@ beego_runmode = dev
 db_user = postgres
 db_pass = postgrespw
 db_name = db_auth_mini
-db_host = database
+db_host = localhost
 db_port = 5432
 jwt_signature_key = jwt_signature_key
 jwt_expiration_time = 84600
