--- a/user-service/.env
+++ b/user-service/.env
@@ -1,8 +1,7 @@
-beego_runmode = dev
 db_user = postgres
 db_pass = postgrespw
 db_name = db_user_mini
-db_host = database
+db_host = localhost
 db_port = 5432
 jwt_signature_key = jwt_signature_key
 jwt_expiration_time = 84600
