--- a/user-service/conf/app.conf
+++ b/user-service/conf/app.conf
@@ -1,7 +1,7 @@
 appname = user-service
 httpport = 8080
 runmode = dev
-autorender = false
+autorender = true
 copyrequestbody = true
 EnableDocs = true
 sqlconn = 
